--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Evolved Perception LLC
 img: /images/ep/evolvedPerceptionLogo.svg
 description: "Evolved Perception LLC Design, Art, Garden"
-baseurl: "/evolvedperceptionllc"
+baseurl: ""
 url: "" 
 tagline: Design, Art, Garden
 
